--- a/main.html
+++ b/main.html
@@ -1,93 +1,32 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pseudo-Elements Demo</title>
+    <style>
+        #container {
+            margin: 20px;
+        }
+        
+        #container::before {
+            content: "Special Text Before";
+            color: #f00;
+            font-size: 20px;
+            display: block;
+        }
+        
+        #container::after {
+            content: "Special Text After";
+            color: #f00;
+            font-size: 20px;
+            display: block;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-	<style>
-		:root {
-    --background-color: rgb(135, 206, 235);
-}
-
-body {
-    background-color: var(--background-color);
-    margin: 0;
-    font-family: Arial, sans-serif;
-}
-
-article p:first-child {
-    color: white;
-    background-color: black;
-    padding: 10px;
-}
-
-article p:nth-child(2) {
-}
-
-article p:last-child {
-    color: red;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-ul li {
-    background-color: gray;
-    width: 50%;
-    padding: 10px;
-    margin: 5px 0;
-}
-
-ul li:nth-child(odd) {
-    background-color: white;
-}
-
-ul li:first-child, ul li:last-child {
-    font-size: 22px;
-}
-
-ul li:nth-last-child(3) {
-    background-color: pink;
-}
-
-	</style>
-</head>
-
-<body>
-	 <article>
-        <p>First paragraph with white text on a black background.</p>
-        <p>Second paragraph with standard text color.</p>
-        <p>Third paragraph with red text.</p>
-    </article>
-
-    <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-        <li>Item 4</li>
-        <li>Item 5</li>
-    </ul>
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div id="container">
+        Main container content goes here
+    </div>
 </body>
-
-</html>
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
 </html>
