--- a/main.html
+++ b/main.html
@@ -10,14 +10,14 @@
         }
         
         #container::before {
-            content: "Special Text Before";
+            content: "Before Element";
             color: #f00;
             font-size: 20px;
             display: block;
         }
         
         #container::after {
-            content: "Special Text After";
+            content: "After Element";
             color: #f00;
             font-size: 20px;
             display: block;
