--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <div id="container">
-        This is the Main container element
+        This is the main container element
     </div>
 </body>
 </html>
